--- a/Resources/administration/src/app/component/form/sw-condition-tree/sw-condition-base/sw-condition-base.scss
+++ b/Resources/administration/src/app/component/form/sw-condition-tree/sw-condition-base/sw-condition-base.scss
@@ -34,17 +34,42 @@ $sw-condition-base-color-error: $color-crimson;
     }
 
     .field--select {
-        width: 124px;
+        width: 144px;
         border-top: 1px solid $sw-condition-base-color-border;
         border-bottom: 1px solid $sw-condition-base-color-border;
+        padding-left: 0;
 
-        .sw-field__select select {
-            outline: none;
-            box-shadow: none;
+        .sw-select__inner {
+            background: transparent;
+            min-height: 40px;
             border: 0;
-            padding: 7px 0;
-            background: $sw-condition-base-color-background;
-            height: 38px;
+            padding-right: 24px;
+            padding-top: 4px;
+
+            .sw-select__single-selection {
+                overflow: hidden;
+                white-space:nowrap;
+                text-overflow:ellipsis;
+            }
+
+            .sw-select__indicators {
+                top: 10px;
+            }
+
+            .sw-select__indicator .sw-icon {
+                top: 12px;
+                right: 5px;
+                color: $sw-condition-base-color-primary-text;
+            }
+
+            .sw-select__results {
+                top: calc(100% - 1px);
+                left: 0;
+
+                .sw-icon {
+                    color: unset;
+                }
+            }
         }
 
         &.field--condition {
@@ -54,18 +79,29 @@ $sw-condition-base-color-error: $color-crimson;
             height: 40px;
             border-top-color: $sw-condition-base-color-primary;
             border-bottom-color: $sw-condition-base-color-primary;
-            border-top-left-radius: 3px;
-            border-bottom-left-radius: 3px;
-            padding-right: 8px;
+            padding-left: 0;
 
-            .sw-field__select {
-                .sw-icon {
-                    color: $sw-condition-base-color-primary-text;
-                }
+            &.is--first {
+                border-top-left-radius: 3px;
+                border-bottom-left-radius: 3px;
+            }
 
-                select {
-                    background: transparent;
-                    color: $sw-condition-base-color-primary-text;
+            &.is--expanded {
+                border-bottom-left-radius: 0;
+            }
+
+            .sw-select__indicator .sw-icon {
+                color: $sw-condition-base-color-primary-text;
+            }
+
+            .sw-select__inner {
+                .sw-select__results {
+                    border-color: $sw-condition-base-color-primary;
+                    color: $sw-condition-base-color-secondary-text;
+
+                    .sw-icon {
+                        color: unset;
+                    }
                 }
             }
 
@@ -136,7 +172,10 @@ $sw-condition-base-color-error: $color-crimson;
     .field--main {
         flex-grow: 1;
         flex-shrink: 1;
-        padding-left: 20px;
+
+        &:not(.field--select):not(.field--multi) {
+            padding-left: 20px;
+        }
     }
 
     .field--multi {
@@ -221,7 +260,7 @@ $sw-condition-base-color-error: $color-crimson;
         border: none;
     }
 
-    .sw-field {
+    .sw-field__input {
         input, select {
             outline: none;
             box-shadow: none;
