--- a/Resources/administration/src/app/component/form/sw-condition-tree/sw-condition-or-container/sw-condition-or-container.html.twig
+++ b/Resources/administration/src/app/component/form/sw-condition-tree/sw-condition-or-container/sw-condition-or-container.html.twig
@@ -12,11 +12,10 @@
                             </div>
                         {% endblock %}
                         {% block sw_condition_container_children_component %}
-                            <component :is="getComponent(child.type)"
+                            <component :is="getComponent(child)"
                                        :condition="child"
                                        :entityAssociationStore="entityAssociationStore"
-                                       :entityName="entityName"
-                                       :conditionIdentifier="conditionIdentifier"
+                                       :config="config"
                                        :conditionStore="conditionStore"
                                        :level="level + 1"
                                        :parentDisabledDelete="disabledDeleteButton"
