--- a/Resources/administration/src/app/component/form/sw-condition-tree/sw-condition-tree.html.twig
+++ b/Resources/administration/src/app/component/form/sw-condition-tree/sw-condition-tree.html.twig
@@ -4,8 +4,7 @@
                          :condition="nestedConditions"
                          :entityAssociationStore="entityAssociationStore"
                          :conditionStore="conditionStore"
-                         :entityName="entityName"
-                         :conditionIdentifier="conditionIdentifier"
+                         :config="config"
                          :level="0">
         </sw-condition-or-container>
     </div>
