--- a/Resources/administration/src/module/sw-product-stream/page/sw-product-stream-detail/sw-product-stream-detail.html.twig
+++ b/Resources/administration/src/module/sw-product-stream/page/sw-product-stream-detail/sw-product-stream-detail.html.twig
@@ -35,9 +35,9 @@
         {% block sw_product_stream_detail_content %}
             <sw-card-view slot="content" sidebar>
                 {% block sw_product_stream_detail_content_language_info %}
-                <sw-language-info
-                        :entityDescription="placeholder(productStream, 'name', $tc('sw-product-stream.detail.textHeadline'))">
-                </sw-language-info>
+                    <sw-language-info
+                            :entityDescription="placeholder(productStream, 'name', $tc('sw-product-stream.detail.textHeadline'))">
+                    </sw-language-info>
                 {% endblock %}
 
                 {% block sw_product_stream_detail_basic_info %}
@@ -45,7 +45,7 @@
                         {% block sw_product_basic_form_name_field %}
                             <sw-field type="text"
                                       :label="$tc('sw-product-stream.detail.labelName')"
-                                      :placeholder="$tc('sw-product-stream.detail.placeholderName')"
+                                      :placeholder="placeholder(productStream, 'name', $tc('sw-product-stream.detail.placeholderName'))"
                                       v-model="productStream.name">
                             </sw-field>
                         {% endblock %}
@@ -53,7 +53,7 @@
                         {% block sw_product_basic_form_description_field %}
                             <sw-field type="textarea"
                                       :label="$tc('sw-product-stream.detail.labelDescription')"
-                                      :placeholder="$tc('sw-product-stream.detail.placeholderDescription')"
+                                      :placeholder="placeholder(productStream, 'description', $tc('sw-product-stream.detail.placeholderDescription'))"
                                       v-model="productStream.description">
                             </sw-field>
                         {% endblock %}
@@ -61,8 +61,13 @@
                 {% endblock %}
 
                 {% block sw_product_stream_detail_filter %}
-                    <sw-card :large="true" :title="$tc('sw-product-stream.detail.titleFilter')">
-                        {# TODO: Add filter tree #}
+                    <sw-card :large="true" class="sw-product-stream-detail__condition_container" :title="$tc('sw-product-stream.detail.titleFilter')">
+                        <sw-condition-tree v-if="productStream"
+                                           :entity="productStream"
+                                           :conditionStore="getDefinitionStore()"
+                                           :config="treeConfig"
+                                           ref="conditionTree">
+                        </sw-condition-tree>
                     </sw-card>
                 {% endblock %}
 
