--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-goods-price/sw-condition-goods-price.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-goods-price/sw-condition-goods-price.html.twig
@@ -1,18 +1,19 @@
 {% block sw_condition_fields %}
     {% block sw_condition_fields_operator %}
-        <sw-field type="select"
-                  name="operator"
-                  v-model="condition.value.operator"
-                  class="field field--select has--arrow">
-            <option v-for="operator in operators" :value="operator.identifier">
-                {{ $tc(operator.label) }}
-            </option>
-        </sw-field>
+        <sw-select name="operator"
+                   id="createId()"
+                   itemValueKey="identifier"
+                   displayName="label"
+                   :store="operators"
+                   :required="true"
+                   v-model="condition.value.operator"
+                   class="field field--select has--arrow">
+        </sw-select>
     {% endblock %}
     {% block sw_condition_fields_value %}
         <sw-field type="number"
                   name="amount"
-                  step="0.01"
+                  :step=0.01
                   class="field field--main"
                   v-model="condition.value.amount">
         </sw-field>
