NEXT-1251 - Extend sw-field with Prefix and Help Tooltip.

--- a/Resources/administration/src/app/component/form/sw-field-suffix/sw-field-suffix.html.twig
+++ b/Resources/administration/src/app/component/form/sw-field-suffix/sw-field-suffix.html.twig
@@ -1,5 +1,5 @@
 {% block sw_suffix_field %}
-    <span v-if="hasSuffix" class="sw-field__suffix">
+    <span class="sw-field__suffix" :class="fieldClasses">
         <slot>
             {% block sw_field_slot_suffix %}
                 {{ suffix }}
