--- a/Resources/administration/src/app/component/form/sw-select-field/sw-select-field.html.twig
+++ b/Resources/administration/src/app/component/form/sw-select-field/sw-select-field.html.twig
@@ -1,4 +1,4 @@
-{% block sw_text_field_input %}
+{% block sw_text_field_input_element %}
     <div class="sw-field__select">
         {% block sw_field_input_select_field %}
             <select :id="id"
