--- a/Resources/administration/src/module/sw-settings-snippet/page/sw-settings-snippet-detail/sw-settings-snippet-detail.html.twig
+++ b/Resources/administration/src/module/sw-settings-snippet/page/sw-settings-snippet-detail/sw-settings-snippet-detail.html.twig
@@ -77,7 +77,7 @@
                                                           :disabled="isCreate"
                                                           :key="snippet.setId"
                                                           :label="$tc('sw-settings-snippet.detail.labelContent', 0, { name: sets[snippet.setId].name })"
-                                                          :placeholder="snippet.origin || $tc('sw-settings-snippet.detail.placeholderValue')">
+                                                          :placeholder="snippet.origin || $tc('sw-settings-snippet.general.placeholderValue')">
                                                 </sw-field>
                                             {% endblock %}
                                         </sw-container>
