NEXT-1617 - (Pre-)Final Refactoring

--- a/Resources/administration/src/module/sw-settings-snippet/component/sidebar/sw-settings-snippet-boolean-filter-item/sw-settings-snippet-boolean-filer-item.html.twig
+++ b/Resources/administration/src/module/sw-settings-snippet/component/sidebar/sw-settings-snippet-boolean-filter-item/sw-settings-snippet-boolean-filer-item.html.twig
@@ -6,7 +6,7 @@
                     <slot name="field">
                         <sw-field type="switch"
                                   :name="name"
-                                  @input="onChange"
+                                  @change="onChange"
                                   :label="label">
                         </sw-field>
                     </slot>
