NEXT-1675 - Add plugin config documentation

--- a/Resources/administration/src/app/component/utils/sw-config-form-renderer/sw-config-form-renderer.html.twig
+++ b/Resources/administration/src/app/component/utils/sw-config-form-renderer/sw-config-form-renderer.html.twig
@@ -14,7 +14,8 @@
                                   :label="getLabel(field)"
                                   :placeholder="getPlaceholder(field)"
                                   :copyAble=field.copyable
-                                  :options="getOptions(field)">
+                                  :options="getOptions(field)"
+                                  :helpText="getHelpText(field)">
                         </sw-field>
                     </sw-card>
                 {% endblock %}
